# GNXMapEngine

./: .gitignore  .gitmodules  README.md
GNXMapEngine/: CMakeLists.txt  MapRenderer.cpp  MapRenderer.h  MapRenderer.mm  MetalWindow.h  MetalWindow.mm  TileDraw.hlsl  VulkanWindow.cpp  VulkanWindow.h  WebMercator.cpp  WebMercator.h  mainwindow.cpp  mainwindow.ui  metalwindow.h  metalwindow.mm
GNXMapEngine/earthCore/: BoundingRegion.cpp  BoundingRegion.h  DEMMeshData.cpp  DEMMeshData.h  EarthCamera.cpp  EarthCamera.h  EarthEngineDefine.h  EarthNode.cpp  EarthNode.h  EarthRenderer.cpp  EarthRenderer.h  Ellipsoid.cpp  Ellipsoid.h  EllipsoidTangentPlane.cpp  EllipsoidTangentPlane.h  GeoGridTessellator.cpp  GeoGridTessellator.h  GeoMath.h  GeoTransform.cpp  GeoTransform.h  Geodetic3D.h  GlobeRectangle.cpp  GlobeRectangle.h  IntersectionTests.cpp  IntersectionTests.h  LayerBase.cpp  LayerBase.h  ObjectBase.h  QuadTileID.cpp  QuadTileID.h  QuadTree.cpp  QuadTree.h  SubdivisionUtility.cpp  SubdivisionUtility.h  TileDataSource.cpp  TileDataSource.h  TileLoadTask.cpp  TileLoadTask.h  TiledImage.h
